<resources>

    <!-- ****************** GERAL ****************** -->
    <!-- Titulo -->
    <string name="app_name">Keep Walking</string>
    <string name="app_subname">Caminhada</string>

    <!-- Lista do Menu Popup -->
    <string name="action_about">Sobre</string>
    <string name="action_help">Ajuda</string>
    <string name="action_history">Histórico</string>
    <!-- ************************************ -->

    <!-- ****************** TELA INICIAL ****************** -->
    <!-- Botoes -->
    <string name="inic">Iniciar</string>
    <string name="pausar">Pausar</string>
    <string name="cont">Continuar</string>
    <string name="salvar">Salvar</string>
    <string name="zerar">Zerar</string>

    <!-- Circulos -->
    <!-- text -->
    <string name="cPassos">Passos</string>
    <string name="cTempo">Tempo</string>
    <string name="cDistancia">Distância</string>
    <string name="cVelocidade">Velocidade</string>
    <string name="cCalorias">Calorias</string>
    <!-- unit -->
    <string name="min">h:m:s</string>
    <string name="m">m</string>
    <string name="m_s">km/h</string>
    <string name="kcal">cal</string>
    <!-- value -->
    <string name="valueDefault">0</string>
    <!-- ************************************ -->


    <!-- ****************** TELA SOBRE ****************** -->
    <!-- Botao -->
    <string name="voltar">Voltar</string>

    <!-- Texto -->
    <string name="sobre">Sobre</string>
    <string name="descricao">O Keep Walking auxilia o usuário em sua caminhada e a torna mais intuitiva e estimulante, incentivando-o a manter uma vida mais saudável.</string>
    <string name="integrantesA">Integrantes</string>
    <string name="integrantesB">Allisson Pierre \n
    Allisson Lima \n
    Caroline Carvalho \n
    Paulo Tavares \n
    Ramon Brito</string>
    <string name="contatoA">Contato</string>
    <string name="contatoB">keepwalking.caminhada@gmail.com</string>
    <!-- ************************************ -->


    <!-- ****************** TELA AJUDA ****************** -->
    <string name="ajuda">Ajuda</string>
    <string name="infoAjuda">Clique no botão INICIAR ao começar sua caminhada,
        caso queira dar uma pausa, toque em PAUSAR, depois poderá clicar em CONTINUAR
        para continuar contado os dados. \n\n
        O botão ZERAR limpará os dados da tela inicial e não salvará nenhum valor atual no histórico. \n\n
        O botão SALVAR, assim como o botão ZERAR, limpará os valores atuais da tela,
        mas irá armazena-los no histórico, assim você poderá começar uma nova caminhada com novos dados. \n\n
        Na opção HISTÓRICO é possível ver o resumo dos dados da caminhada a cada dia
        e o total geral. Clique em LIMPAR para zerar o histórico.</string>
    <!-- ************************************ -->


    <!-- ****************** TELA HISTORICO ****************** -->
    <string name="history">Histórico</string>
    <string name="btTotal">Total</string>
    <string name="btLimpar">Limpar</string>
    <!-- ************************************ -->
</resources>
