<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context="com.example.univasf.keepwalking.MainActivity">

    <!-- Acoes do Menu Popup -->

    <!-- Acao Historico -->
    <item
        android:id="@+id/action_history"
        android:orderInCategory="100"
        android:title="@string/action_history" />

    <!-- Acao Ajuda -->
    <item
        android:id="@+id/action_help"
        android:orderInCategory="101"
        android:title="@string/action_help"/>

    <!-- Acao Sobre -->
    <item
        android:id="@+id/action_about"
        android:orderInCategory="102"
        android:title="@string/action_about"/>

</menu>
